--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   mysql1: ^0.19.2
   http: ^0.13.4
+  flutter_advanced_drawer: ^1.3.0
+  another_flushbar: ^1.10.26
 
 dev_dependencies:
   flutter_test:
